# Kryptografia2.1

./: CMakeLists.txt  encrypt.sh  main.cpp
